# manhwa-checker

./: app.db  config.py  flask_api.py  package.json  pyproject.toml
app/: models.py  routes.py
backend/: scrapers.py
backend/utils/: __init__.py  proxy.py
tests/: test_api.py  test_rotators.py  test_scrapers.py
